--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,7 @@ h4{
                             <img src="img.tiganu.png" alt="TIGANU ARMANDO">
                         </div>
                         <div class="sub-department-details">
-                            <h4>Tiganu Pula Armando</h4>
+                            <h4>Tiganu Armando</h4>
                             <p class="role">Inspector Șef M.M.L.S</p>
                             <p class="rank"><small>Contact: </small>@bebito_st | Mobil: 796-1789</p>
                         </div>
