--- a/index.html
+++ b/index.html
@@ -56,14 +56,21 @@
                 --ring: 240 4.9% 83.9%;
             }
         }
+
+        @font-face {
+  font-family: 'Space Grotesk';
+  src: local('Space Grotesk'), url('https://fonts.gstatic.com/s/spacegrotesk/v16/fC1mPYxPY3rXxEndZQYj14Ett5E.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
         /* Stil general */
         * {
-            margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            user-select: none;
-        }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Space Grotesk', sans-serif;
+  user-select: none;
+}
 
         body {
     background: linear-gradient(283deg, #494949 45%, #1b1b1bf1 55%);
@@ -95,7 +102,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('./image.png'); /* Calea către imagine */
+    background-image: url('./Image.png'); /* Calea către imagine */
     background-position: center; /* Centrează imaginea */
     background-repeat: no-repeat;
     background-size: cover;
@@ -268,7 +275,6 @@ nav.nav-menu a.active::before {
             color: #ffffff;
             font-size: 1.8em;
             margin-bottom: 20px;
-            font-style: italic;
             text-align: center;
         }
 
@@ -764,10 +770,13 @@ h4{
     .pozaSpital{
         height: 30%;
     }
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap');
+
 }
 /* Stiluri generale pentru întreaga secțiune */
 #conducerea-spitalului {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
     width: 100%;
     margin-bottom: 10;
     padding-bottom: 30px; /* Adăugăm padding la bază */
@@ -1159,7 +1168,7 @@ h4{
         <span></span>
     </div>
     <header>
-        <a href="#" class="logo">Departamentul Medical</a><span id="medic"></span>
+        <center><a href="#" class="logo">Departamentul Medical</a><span id="medic"></span></center>
         <button class="hamburger" aria-label="Toggle navigation">
             <span></span>
             <span></span>
@@ -1176,7 +1185,7 @@ h4{
         </nav>
     </header>
     <div class="container" id="container">
-        <h2 style="font-size: 24px; color: #ffffff; text-align: center; font-weight: 500; font-style: italic;">Anunțuri Importante</h2>
+        <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 30px; color: #ffffff; text-align: center; font-weight: 500;">Anunțuri Importante</h2>
         <section id="data-list" style="display: none;" class="flex flex-row overflow-x-scroll gap-[2%] h-[64vh] bg-transparent shadow-none font-size:13px">
         </section>
         <section id="about">
@@ -1312,6 +1321,10 @@ h4{
         </section>
 
         <section id="services">
+            <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
             <h2>Servicii</h2>
             <div class="services">
                 <div class="service-card">
