--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('.Image.png'); /* Calea către imagine */
+    background-image: url('.image.png'); /* Calea către imagine */
     background-position: center; /* Centrează imaginea */
     background-repeat: no-repeat;
     background-size: cover;
