--- a/index.html
+++ b/index.html
@@ -1536,6 +1536,8 @@ h4{
             </div>
             <div id="responseMessageEveniment"></div>
         </section>
+<!-- înainte de </body> -->
+<script src="script.js"></script>
 </body>
 <script type ="module" src="./script.js"></script>
 </html>
