--- a/index.html
+++ b/index.html
@@ -1538,7 +1538,7 @@ h4{
             </div>
             <div id="responseMessageEveniment"></div>
         </section>
-<!-- înainte de </body> -->
+<!-- La finalul fișierului index.html -->
 <script src="script.js"></script>
 </body>
 <script type ="module" src="./script.js"></script>
