--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@ h4{
     </header>
     <div class="container" id="container">
         <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 30px; color: #ffffff; text-align: center; font-weight: 500;">Anunțuri Importante</h2>
-        <section id="data-list" style="display: none;" class="flex flex-row overflow-x-scroll gap-[2%] h-[64vh] bg-transparent shadow-none font-size:13px">
+        <section id="data-list" style="display: none;" class="flex flex-row overflow-x-hidden gap-[2%] h-[64vh] bg-transparent shadow-none font-size:13px">
         </section>
         <section id="about">
             <h2>Despre noi</h2>
