--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,21 @@ h4{
                 
                 În plus, ne concentrăm nu doar pe tratamentele fizice, ci și pe confortul și starea ta mentală, oferindu-ți un mediu calm, prietenos și sigur, unde să te simți încrezător și sprijinit pe parcursul întregului proces medical. Înțelegem cât de important este să fii tratat cu respect și empatie, motiv pentru care fiecare membru al echipei noastre este pregătit să îți acorde atenția de care ai nevoie. Astfel, în Departamentul Medical, pacienții nu sunt doar numere, ci sunt tratați ca persoane, cu nevoi individuale și unici în experiențele lor.</p>
         </section>
+        <section id="about">
+    <h2>Despre noi</h2>
 
+    <!-- Videoclip YouTube -->
+    <div style="text-align: center; margin-bottom: 40px;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ID_VIDEO" 
+            title="Videoclip Despre Noi" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
+    </div>
+
+    <p>
+        Departamentul Medical funcționează cu un singur scop esențial: [...]
+    </p>
+</section>
         <section id="lista">
             <h2>Conducerea Spitalului</h2>
             <div class="box">
