--- a/index.html
+++ b/index.html
@@ -1192,30 +1192,13 @@ h4{
         </section>
         <section id="about">
             <h2>Despre noi</h2>
-            <p>
-                Departamentul Medical funcționează cu un singur scop esențial: să îți oferim îngrijire de cea mai înaltă calitate, într-un cadru profesional, dedicat sănătății tale și bunăstării tale. Echipa noastră se angajează să îți furnizeze tratamente personalizate, bazate pe cele mai noi descoperiri și inovații din domeniul medical, astfel încât să te bucuri de un tratament eficient și sigur. În fiecare etapă a procesului, de la consult și diagnostic până la tratament și recuperare, te asigurăm că vei beneficia de soluții medicale de top, adaptate nevoilor tale specifice.
-                
-                În plus, ne concentrăm nu doar pe tratamentele fizice, ci și pe confortul și starea ta mentală, oferindu-ți un mediu calm, prietenos și sigur, unde să te simți încrezător și sprijinit pe parcursul întregului proces medical. Înțelegem cât de important este să fii tratat cu respect și empatie, motiv pentru care fiecare membru al echipei noastre este pregătit să îți acorde atenția de care ai nevoie. Astfel, în Departamentul Medical, pacienții nu sunt doar numere, ci sunt tratați ca persoane, cu nevoi individuale și unici în experiențele lor.</p>
+            <div style="text-align: center; margin-bottom: 20px;">
+                <center><video width="750" height="315" controls>
+                    <source src="video/despre_noi.mp4" type="video/mp4">
+                    Videoclipul nu poate fi redat în browserul tău.
+                </video></center>
+            </div>
         </section>
-       <section id="about">
-    <h2>Despre noi</h2>
-
-    <!-- Videoclip local integrat în secțiune -->
-    <div style="text-align: center; margin-bottom: 20px;">
-        <video width="560" height="315" controls>
-            <source src="video/despre_noi.mp4" type="video/mp4">
-            Videoclipul nu poate fi redat în browserul tău.
-        </video>
-    </div>
-
-    <p>
-        Departamentul Medical funcționează cu un singur scop esențial: să îți oferim îngrijire de cea mai înaltă calitate, într-un cadru profesional, [...]
-    </p>
-</section>
-    <p>
-        Departamentul Medical funcționează cu un singur scop esențial: [...]
-    </p>
-</section>
         <section id="lista">
             <h2>Conducerea Spitalului</h2>
             <div class="box">
