--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
   user-select: none;
 }
 
+footer {
+  background-color: transparent;
+  color: white;
+  padding: 20px 0;
+  text-align: center;
+}
+
         body {
     background: linear-gradient(283deg, #494949 45%, #1b1b1bf1 55%);
     background-blend-mode: darken;
@@ -351,7 +358,7 @@ nav.nav-menu a.active::before {
             color: white;
         }
         .footer-content {
-    background-color: #252525; /* Fundal închis */
+    background-color: transparent; /* Fundal închis */
     color: #ffffff; /* Text alb */
     width: 100%; /* Asigură lățimea completă */
     padding: 5px 20px; /* Spațiere consistentă */
@@ -386,7 +393,7 @@ nav.nav-menu a.active::before {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    color: #ffffff;
+    color: #000000;
     font-size: 26px;
     width: 50px;
     height: 50px;
@@ -1192,13 +1199,8 @@ h4{
         </section>
         <section id="about">
             <h2>Despre noi</h2>
-            <div style="text-align: center; margin-bottom: 20px;">
-                <center><video width="750" height="315" controls>
-                    <source src="video/despre_noi.mp4" type="video/mp4">
-                    Videoclipul nu poate fi redat în browserul tău.
-                </video></center>
-            </div>
         </section>
+</section>
         <section id="lista">
             <h2>Conducerea Spitalului</h2>
             <div class="box">
@@ -1328,7 +1330,7 @@ h4{
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 />
-            <h2>Servicii</h2>
+            <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Servicii</h2>
             <div class="services">
                 <div class="service-card">
                     <i class="fas fa-stethoscope"></i>
@@ -1353,7 +1355,7 @@ h4{
         </section>
 
             <section id="conducerea-spitalului" style="margin-top: 100px; gap:10px; display: flex; flex-direction: column;">
-                <h2>Sub-Departamentele Spitalului</h2>
+                <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Sub-Departamentele Spitalului</h2>
                 <span>Medicina Muncii Los Santos</span>
                 <div class="sub-department-container">
                     <!-- Primele 2 sub-departamente pentru Medicina Muncii -->
@@ -1564,8 +1566,8 @@ h4{
                       <li><a href="https://discord.gg/fplayt"><ion-icon name="logo-discord"></ion-icon></a></li>  
                       <li><a href="https://www.tiktok.com/@medici_fplayt"><ion-icon name="logo-tiktok"></ion-icon></a></li>  
                     </ul> 
-                    <p>&copy; 2024 Departamentul Medical | All rights reserved</p>
-                    <p>Pentru probleme și nelămuriri, lăsați un mesaj la: @tristan1112</p>
+                    <p style="color: #000000;">&copy; 2025 Departamentul Medical | All rights reserved</p>
+                    <p style="color: #000000;">Pentru probleme și nelămuriri, lăsați un mesaj la: @ZEiyxl, @madalin7681</p>
                 </footer>
             </div>
             <div id="responseMessageEveniment"></div>
