--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@ body::before {
     z-index: -1; /* Asigură-te că imaginea este în spate față de text */
 }
 
-.
-
-        header {
+    .header {
     position: sticky;
     top: 0;
     width: 100%;
@@ -184,6 +182,13 @@ nav.nav-menu a::before {
 
 nav.nav-menu a:hover::before {
     width: 100%;
+}
+
+/* STIU EU DESPRE ASTA (AMPU) */
+
+.a {
+    text-align: center;
+    align-items: center;
 }
 
 /* Stil pentru butonul activ */
@@ -297,11 +302,11 @@ nav.nav-menu a.active::before {
 
         .service-card {
             background: #ffffff;
-            padding: 20px;
+            padding: 30px;
             width: 250px;
             text-align: center;
             border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.8);
+            box-shadow: 0 2px 20px rgba(255, 1, 1, 0.8);
             transition: transform 0.8s, box-shadow 0.5s;
         }
 
@@ -1183,26 +1188,29 @@ h4{
             <span></span>
             <span></span>
         </button>  
-        <nav class="nav-menu">
-            <a href="#container" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Anunțuri</a> 
-            <a href="#about" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Despre noi</a>
-            <a href="#lista" style="--clr:#ff4d4d;">Conducere</a>
-            <a href="#services" style="--clr:#ff4d4d;" >Servicii</a>
-            <a href="#conducerea-spitalului" style="--clr:#ff4d4d;">Sub-Departamente</a>
-            <a href="#contact" style="--clr:#ff4d4d;" >Cerere Audiență</a>
-            <a href="#extra" style="--clr:#ff4d4d;">Informații</a>
-        </nav>
+        <center><nav class="nav-menu">
+            <a href="#container" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;">Anunțuri</a> 
+            <a href="#about" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;">Despre noi</a>
+            <a href="#lista" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;">Conducere</a>
+            <a href="#services" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;">Sub-Departamente</a>
+            <a href="#contact" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;" >Cerere Audiență</a>
+            <a href="#extra" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;">Informații</a>
+        </nav></center>
     </header>
     <div class="container" id="container">
         <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 30px; color: #ffffff; text-align: center; font-weight: 500;">Anunțuri Importante</h2>
         <section id="data-list" style="display: none;" class="flex flex-row overflow-x-hidden gap-[2%] h-[64vh] bg-transparent shadow-none font-size:13px">
         </section>
         <section id="about">
-            <h2>Despre noi</h2>
-        </section>
+            <Center><h2, style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; color: white; font-size: 25px;">Despre noi</h2></Center>
+           <div style="text-align: center; margin-bottom: 20px;">
+                <center><video width="750" height="315" controls>
+                     <source src="video/despre_noi.mp4" type="video/mp4">
+                    Videoclipul nu poate fi redat în browserul tău.
+                </video></center>
 </section>
         <section id="lista">
-            <h2>Conducerea Spitalului</h2>
+            <center><h2, style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; color: white; font-size: 25px;">Conducerea Spitalului</h2></center>
             <div class="box">
                 <div class="list">
                     <div class="imgBx">
