--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css?v=2">
     <link rel="shortcut icon" type="x-icon" href="logomedici.png">
     <title>Spitalul Județean Viceroy</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
@@ -143,6 +142,12 @@ body::before {
 }
 /* Meniul principal */
 nav.nav-menu {
+
+    opacity: 0.8;
+    font-size: 20px;
+    background-color: #8e0c0c;
+    padding: 20px;
+    border-radius: 30px;
     display: flex;
     gap: 20px;
 }
@@ -260,6 +265,7 @@ nav.nav-menu a.active::before {
 }
         /* Container */
         .container {
+            border-radius: 20px;
             min-height: calc(100vh - 200px);
             max-width: 1200px;
             margin-bottom: 100px;
@@ -790,6 +796,7 @@ h4{
 }
 
 .sub-department-container {
+    border-radius: 20px;
     display: flex;
     flex-direction: row !important;
     flex-wrap: wrap;
@@ -802,7 +809,7 @@ h4{
     width: 40%; /* Dimensiune mai mică pentru box */
     height: 150px; /* Înălțime redusă pentru dreptunghi */
     background-color: #fff;  /* Fundal alb */
-    border-radius: 5px;  /* Colțuri ușor rotunjite */
+    border-radius: 30px;  /* Colțuri ușor rotunjite */
     overflow: hidden;  /* Ascundem orice conținut care depășește boxul */
     transition: transform 0.7s ease;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
@@ -1087,7 +1094,7 @@ h4{
 }
 
         .collapsible:hover {
-            background-color: #94311f;
+            background-color: #630000;
             border-radius: 30px;
         }
 
@@ -1142,7 +1149,7 @@ h4{
         }
 
         button:hover {
-            background-color: #8a2000;
+            background-color: #630000;
         }
 
         #responseMessage {
@@ -1177,7 +1184,8 @@ h4{
 
     </style>
 </head>
-<body>        
+<body> 
+           
     <div class="background">
         <span></span>
         <span></span>
@@ -1193,7 +1201,7 @@ h4{
     </div>
     <header>
         <h2 style="color: transparent;">asas</h2>
-        <center><a href="#" class="logo">Departamentul Medical</a><span id="medic"></span></center>
+        <center><a href="#" class="logo" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Departamentul Medical</a><span id="medic"></span></center>
         <h2 style="color: transparent;">salut nica</h2>
         <button class="hamburger" aria-label="Toggle navigation">
             <span></span>
@@ -1201,19 +1209,23 @@ h4{
             <span></span>
         </button>  
         <center><nav class="nav-menu">
-            <a href="#container" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;">Anunțuri</a> 
-            <a href="#about" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;">Despre noi</a>
-            <a href="#lista" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;">Conducere</a>
-            <a href="#services" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;">Sub-Departamente</a>
-            <a href="#contact" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;" >Cerere Audiență</a>
-            <a href="#extra" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; font-size: 15px;">Informații</a>
+            <a href="#container" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Anunțuri</a> 
+            <a href="#about" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Despre noi</a>
+            <a href="#lista" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Conducere</a>
+            <a href="#services" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Sub-Departamente</a>
+            <a href="#contact" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;" >Cerere Audiență</a>
+            <a href="#extra" style="--clr:#ff4d4d; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Informații</a>
         </nav></center>
     </header>
+    <h2 style="color: transparent; font-size: 50px;">iasa</h2>
+    <div style="border-radius: 60px; height: 200px; width: 450px; background-color: rgba(142, 12, 12, 0.6); padding: 20px;">
+        <img src="./logospital.png" style="border-radius: 60px; width: 400px; height: 120px;">
+      </div>
     <div class="container" id="container">
         <h2 style="font-weight: bold; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 30px; color: #ffffff; text-align: center; font-weight: 500;">Anunțuri Importante</h2>
         <section id="data-list" style="display: none;" class="flex flex-row overflow-x-hidden gap-[2%] h-[64vh] bg-transparent shadow-none font-size:13px">
         </section>
-        <section id="about">
+        <section id="about" style="border-radius: 30px;">
             <Center><h2, style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; color: white; font-size: 25px;">Despre noi</h2></Center>
            <div style="text-align: center; margin-bottom: 20px;">
                 <center><video width="750" height="315" controls>
@@ -1221,7 +1233,7 @@ h4{
                     Videoclipul nu poate fi redat în browserul tău.
                 </video></center>
 </section>
-        <section id="lista">
+        <section id="lista" style="border-radius: 30px;">
             <center><h2, style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; color: white; font-size: 25px;">Conducerea Spitalului</h2></center>
             <div class="box">
                 <div class="list">
@@ -1345,7 +1357,7 @@ h4{
             </div>
         </section>
 
-        <section id="services">
+        <section id="services" style="border-radius: 30px;">
             <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -1374,7 +1386,7 @@ h4{
                 </div>
         </section>
 
-            <section id="conducerea-spitalului" style="margin-top: 100px; gap:10px; display: flex; flex-direction: column;">
+            <section id="conducerea-spitalului" style="margin-top: 100px; gap:10px; display: flex; flex-direction: column; border-radius: 30px;">
                 <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Sub-Departamentele Spitalului</h2>
                 <span>Medicina Muncii Los Santos</span>
                 <div class="sub-department-container">
@@ -1532,7 +1544,7 @@ h4{
                   
                 </section> 
 
-                <section id="extra" style="margin-top: 100px;">
+                <section id="extra" style="margin-top: 100px; border-radius: 30px;">
                     <h2>Informații Extra</h2>
                     <p>- Pentru a intra în Departament este nevoie de minim 50 ore</p>
                     <p>- În cazul în care ai primit CK poți intra chiar și la 0 ore pe character</p>
@@ -1557,8 +1569,8 @@ h4{
                       <li><a href="https://discord.gg/fplayt"><ion-icon name="logo-discord"></ion-icon></a></li>  
                       <li><a href="https://www.tiktok.com/@medici_fplayt"><ion-icon name="logo-tiktok"></ion-icon></a></li>  
                     </ul> 
-                    <p style="color: #000000;">&copy; 2025 Departamentul Medical | All rights reserved</p>
-                    <p style="color: #000000;">Pentru probleme și nelămuriri, lăsați un mesaj la: @ZEiyxl, @madalin7681</p>
+                    <p style="color: #000000; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">&copy; 2025 Departamentul Medical | All rights reserved</p>
+                    <p style="color: #000000; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Pentru probleme și nelămuriri, lăsați un mesaj la: @ZEiyxl, @madalin7681</p>
                 </footer>
             </div>
             <div id="responseMessageEveniment"></div>
