--- a/index.html
+++ b/index.html
@@ -495,6 +495,9 @@ nav.nav-menu a.active::before {
     margin-top: 15px;
 }
 .cv-button {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-weight: bold;
+            border-radius: 30px;
             position: relative;
             display: inline-block;
             font-size: 1.1em;
@@ -524,12 +527,13 @@ nav.nav-menu a.active::before {
         }
 
         .cv-button::before {
+            border-radius: 20px;
             content: '';
             position: absolute;
             top: 0;
             left: -50px;
             width: 0;
-            height: 100%;
+            height: 101%;
             background: rgb(255, 0, 0);
             transform: skewX(35deg);
             z-index: -1;
@@ -575,6 +579,7 @@ nav.nav-menu a.active::before {
     }
 }
         .action-button {
+            border-radius: 30px;
             position: relative;
             display: inline-block;
             font-size: 1.1em;
@@ -605,6 +610,7 @@ nav.nav-menu a.active::before {
         }
 
         .action-button::before {
+            border-radius: 20px;
             content: '';
             position: absolute;
             top: 0;
@@ -1502,7 +1508,7 @@ h4{
                     </div>
 
                     <div style="text-align: center; margin-top: 20px;">
-                        <a href="https://programari-pcls.vercel.app/" class="action-button">
+                        <a href="https://programari-pcls.vercel.app/" class="action-button" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">
                             Creează o Programare
                         </a>
                     </div>
@@ -1545,14 +1551,14 @@ h4{
                 </section> 
 
                 <section id="extra" style="margin-top: 100px; border-radius: 30px;">
-                    <h2>Informații Extra</h2>
-                    <p>- Pentru a intra în Departament este nevoie de minim 50 ore</p>
+                    <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold;">Informații Extra</h2>
+                    <center><p>- Pentru a intra în Departament este nevoie de minim 50 ore</p>
                     <p>- În cazul în care ai primit CK poți intra chiar și la 0 ore pe character</p>
                     <p>- Sunteți obligați odată cu intrarea în Departament să vă scoateți tatuajele de pe față</p>
                     <p>- Structura Departamentului este una foarte dezvoltata care are nevoie de timp pentru a fi înțeleasă</p>
                     <p>- Regulamentul pentru susținerea testelor se găsește pe forum</p>
                     <p>- Foarte multe intrari/iesiri în/din Departament pot aduce la un BlackList temporar</p>
-                    <p>- Odată cu intrarea în Departament nu puteți face alt job, fie part time, fie full time</p>
+                    <p>- Odată cu intrarea în Departament nu puteți face alt job, fie part time, fie full time</p></center>
                     <div class="bottom" style="width: 100%; display: flex; flex-direction: row; gap: 20px; align-items: center; justify-content: center; box-sizing: border-box;">
                         <img src="./logospital.png" style="width: 20%; height: 20%; border-radius: 0;  margin: 0;">
                         <a href="https://forum.fplayt.ro/index.php?/forums/forum/165-spitalul-general-aplicatii-cv/" class="cv-button" style="margin-top: 0;">Creează un CV</a>
