--- a/index.html
+++ b/index.html
@@ -781,12 +781,20 @@ h4{
         height: auto;
     }
     #data-list{
-        width: 100%;
-        height: 88vh;
+        display: flex;
+    overflow-x: auto; /* Permite derularea orizontală */
+    scroll-behavior: smooth; /* Derulare lină */
+    gap: 20px; /* Spațiu între anunțuri */
+    padding: 10px;
+    scrollbar-width: none; /* Ascunde scrollbar-ul în Firefox */
+    }
+    #data-list::-webkit-scrollbar {
+        display: none; /* Ascunde scrollbar-ul în Chrome, Edge, etc. */
     }
     .anuntSpital{
-        min-width: 100%;
-        min-height: 100%;
+        flex: 0 0 auto; /* Asigură afișarea pe un singur rând */
+    width: 90%; /* Ajustează dimensiunea pentru mobil */
+    max-width: 300px; /* Dimensiune maximă pentru fiecare anunț */
     }
     .pozaSpital{
         height: 30%;
